# sqllite-auth-provider

./: Cargo.toml  Dockerfile
src/: main.rs
